# cis194

week1/: LICENSE  week1.cabal
week1/src/: Main.hs
week2/: week2.cabal
week2/src/: LogAnalysis.hs
