name:                week1
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/gws/week1#readme
license:             BSD3
license-file:        LICENSE
author:              Gordon Stratton
maintainer:          gordon.stratton@gmail.com
copyright:           2016 Gordon Stratton
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable week1
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
